EKS/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deploy
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: jeet1418/petclinic:v1
          ports:
            - containerPort: 8080
