EKS/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  labels:
    app: petclinic
spec:
  type: ClusterIP
  selector:
    app: petclinic
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
