EKS/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ing

spec:
  ingressClassName: nginx
  rules:
    - host: petclinic.jeet1418.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic-svc
                port:
                  number: 80
